# mvm

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
cmake/: MvmConfig.cmake.in
examples/: CMakeLists.txt
examples/exta/: CMakeLists.txt  main.cpp
examples/mini/: CMakeLists.txt  main.cpp  square_sum.mas
include/mvm/: assembler.h  base_assembler.h  base_disassembler.h  base_interpreter.h  base_stack.h  base_vm.h  bytecode_serializer.h  concept.h  disassembler.h  except.h  instr.h  instr_set.h  instr_set_traits.h  interpreter.h  macros.h  meta.h  mvm.h  program.h  program_chunk.h  status.h  trace.h  traits.h  types.h  utils.h  value_stack.h  vm.h
include/mvm/helpers/: list.h  num_parse.h  reflect.h  typestring.h  utils.h
tests/: CMakeLists.txt  base_stack_test.cpp  base_vm_test.cpp  instr_set_test.cpp  list_test.cpp  meta_test.cpp  mvm_test_driver.cpp  num_parse_test.cpp  program_test.cpp  reflect_test.cpp  test_common.h  typestring_test.cpp  value_stack_test.cpp  vm_test.cpp
